--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "antd": "^4.16.13",
         "axios": "^0.21.1",
         "bootstrap": "^5.1.0",
-        "json-server": "^0.16.3",
+        "firebase": "^9.0.1",
+        "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-hook-form": "^7.14.0",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
@@ -21,7 +24,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "start:server": "json-server --watch src/db.json --port 5005",
+        "start:server": "json-server src/db.json -m ./node_modules/json-server-auth --port 5005",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
@@ -52,6 +55,8 @@
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-react-hooks": "^4.2.0",
+        "json-server": "^0.16.3",
+        "json-server-auth": "^2.1.0",
         "prettier": "2.3.2"
     }
 }
